ejs 링크 수정중

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
       } */
     
     .dropdown-item:active {
-      background-color: #0e3023af;
+      background-color:grey;
       }
     
       
