--- a/views/items.ejs
+++ b/views/items.ejs
@@ -44,7 +44,9 @@
           background-color: grey;
         }
         
-
+        .dropdown-item:active {
+          background-color:grey;
+        }
         @media (max-width: 890px) {
           ul.nav.col-12 {
           display: none;
