--- a/views/mypage_modify.ejs
+++ b/views/mypage_modify.ejs
@@ -40,7 +40,13 @@
           background-color: white;
         }
 
+        .dropdown-item:active {
+            background-color:grey;
+        }
 
+
+
+        
     </style>
 </head>
 <body>
