--- a/views/mypage_out _fail.ejs
+++ b/views/mypage_out _fail.ejs
@@ -41,6 +41,9 @@
           background-color: white;
         }
 
+        .dropdown-item:active {
+           background-color:grey;
+        }
 
 
     </style>
