--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -22,6 +22,10 @@
         main {
           background-color: white;
         }
+
+        .dropdown-item:active {
+          background-color:grey;
+        }
     </style>
 
 </head>
