--- a/views/random_result.ejs
+++ b/views/random_result.ejs
@@ -35,55 +35,55 @@
         }
 
         @font-face {
-  font-family: 'Recipekorea';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+          font-family: 'Recipekorea';
+          src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff');
+          font-weight: normal;
+          font-style: normal;
+                }
+          /* 링크 글자 서식 */     
+        a, a:link {  
+          text-align: center;
+          color: black;
+          text-decoration: none;
+          font-family: 'Recipekorea';
+        }    
+        .title {
+            /* p.title태그 글자 서식 */
+          color: #000;
+          text-decoration: none;
+          font-family: 'Recipekorea';
+          font-size: 70px;
+        }   
+        .Que {
+            /* p.Que(질문)태그 글자 서식 */
+          color: #000;
+          text-decoration: none;
+          font-family: 'Recipekorea';
+          font-size: 50px;
+        }  
+        #help,#help2,#help3,#help4,#help5,#help10,#help11,#help12,#help13,#help14{
+          color: white;
+          font-family: Helvetica Nene;
         }
-   /* 링크 글자 서식 */     
-a, a:link {  
-  text-align: center;
-  color: black;
-  text-decoration: none;
-  font-family: 'Recipekorea';
-}    
-.title {
-    /* p.title태그 글자 서식 */
-  color: #000;
-  text-decoration: none;
-  font-family: 'Recipekorea';
-  font-size: 70px;
-}   
-.Que {
-    /* p.Que(질문)태그 글자 서식 */
-  color: #000;
-  text-decoration: none;
-  font-family: 'Recipekorea';
-  font-size: 50px;
-}  
-#help,#help2,#help3,#help4,#help5,#help10,#help11,#help12,#help13,#help14{
-  color: white;
-  font-family: Helvetica Nene;
-}
-#help6,#help7,#help8,#help9{
-  color: black;
-  font-family: Helvetica Nene;
-  text-align: end;
-}
+        #help6,#help7,#help8,#help9{
+          color: black;
+          font-family: Helvetica Nene;
+          text-align: end;
+        }
 
 
 
-.row{
-    text-align: center;
-}
-main{
-  background-color: white;
-}
-body{
-  background-color: rgb(238,238,238);
-}
+      .row{
+          text-align: center;
+      }
+      main{
+        background-color: white;
+      }
+      body{
+        background-color: rgb(238,238,238);
+      }
 
-#box1 {
+      #box1 {
           text-align: center;
           line-height:250px;
           /* box-shadow: 7px 7px 5px gray; */
@@ -92,6 +92,10 @@ body{
           border: none;
           /* border-bottom: thick double #32a1ce; */
           box-sizing: border-box;
+      }
+
+      .dropdown-item:active {
+        background-color:grey;
       }
 
         
