--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -38,11 +38,14 @@
     </a>
       <!-- nbsp텍스트 영역으로 들여옴, col-md 바꿈 -->
     <ul class="nav col-12 col-md-5 mb-2 justify-content-center mb-md-0">
-      <li><a href="#" class="nav-link px-2 link-light">Home</a></li>
-      <li><a href="#" class="nav-link px-2 link-light">About</a></li>
-      <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>
-      <li><a href="#" class="nav-link px-2 link-light">Shop</a></li>
-      <li><a href="#" class="nav-link px-2 link-light">Recommend</a></li>
+      <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light" id="help">Home</a></li>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/information_vegan.html" class="nav-link px-2 link-light" id="help2">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/information_news.html" class="nav-link px-2 link-light" id="help3">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light" id="help4">Shop</a></li>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light" id="help5">Recommend</a>
+      </li>
     </ul>
 
     <div class="col-md-3 col-sm-2 text-end">
