이모지 최고

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -387,7 +387,7 @@
                 <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
                 <input type="hidden" name="strike_price" value="<%=rows[4*i].strike_price%>">
                 <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
+                <input type="submit" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData()">
               </form>
              <% }%>
           </div>
@@ -405,7 +405,7 @@
                 <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
                 <input type="hidden" name="strike_price" value="<%=rows[4*i+1].strike_price%>">
                 <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
+                <input type="submit" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData()">
               </form>
              <% }%>
              <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
@@ -424,7 +424,7 @@
                   <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
                   <input type="hidden" name="strike_price" value="<%=rows[4*i+2].strike_price%>">
                   <input type="hidden" name="user_id" value="<%=user.id%>">
-                  <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
+                  <input type="submit" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData()">
                 </form>
                <% }%>
               <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
@@ -443,7 +443,7 @@
                   <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
                   <input type="hidden" name="strike_price" value="<%=rows[4*i+3].strike_price%>">
                   <input type="hidden" name="user_id" value="<%=user.id%>">
-                  <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
+                  <input type="submit" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData()">
                 </form>
                <% }%>
               <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
