--- a/views/random_result.ejs
+++ b/views/random_result.ejs
@@ -227,7 +227,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <a href="hhttp://127.0.0.1:3000/recommend_start.html"><img src="../img/다시하기버튼.jpg" alt="" class="mx-2 my-5"></a>
+            <a href="http://127.0.0.1:3000/recommend_start.html"><img src="../img/다시하기버튼.jpg" alt="" class="mx-2 my-5"></a>
           </div>
         </div>
     </div>
