--- a/views/items.ejs
+++ b/views/items.ejs
@@ -162,7 +162,7 @@
   <br>
   <div class="container row justify-content-center my-3" style="margin: 0 auto;">
     <div class="col my-3">
-      <a href="#"><button class="btn btn-dark col-12">All</button></a>
+      <a href="http://127.0.0.1:3000/show_item"><button class="btn btn-dark col-12">All</button></a>
     </div>
     <div class="dropdown col my-3">
       <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
