index footer update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -369,7 +369,7 @@ body{background-color:#f1f1f2}
 
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
-    <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
+    <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
    
     <ul class="nav col-xl-6 col-lg-12 col-md-12 justify-content-end">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help10">인공_다람쥐 &nbsp; |</a></li>
