--- a/views/items.ejs
+++ b/views/items.ejs
@@ -399,13 +399,13 @@
            <a href="<%=rows[4*i].purchase_link%>"><div class="product-name my-2"><%=rows[4*i].item_name%></div></a>
             <div class="product-price mb-2" style="margin: 0 auto;"><%=rows[4*i].strike_price%>원</div>
             <% if(user!=null){%>
-              <form action="http://127.0.0.1:3000/wish">
+              <form name="testForm<%=4*i%>">
                 <input type="hidden" name="img_link" value="<%=rows[4*i].img_link%>">
                 <input type="hidden" name="purchase_link" value="<%=rows[4*i].purchase_link%>">
                 <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
                 <input type="hidden" name="strike_price" value="<%=rows[4*i].strike_price%>">
                 <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData()">
+                <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i%>)">
               </form>
              <% }%>
           </div>
@@ -417,13 +417,13 @@
             <a href="<%=rows[4*i+1].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+1].item_name%></div></a>
              <div class="product-price mb-2"><%=rows[4*i+1].strike_price%>원</div>
              <% if(user!=null){%>
-              <form action="http://127.0.0.1:3000/wish">
+              <form name="testForm<%=4*i+1%>">
                 <input type="hidden" name="img_link" value="<%=rows[4*i+1].img_link%>">
                 <input type="hidden" name="purchase_link" value="<%=rows[4*i+1].purchase_link%>">
                 <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
                 <input type="hidden" name="strike_price" value="<%=rows[4*i+1].strike_price%>">
                 <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData()">
+                <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i+1%>)">
               </form>
              <% }%>
              <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
@@ -436,13 +436,13 @@
               <a href="<%=rows[4*i+2].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+2].item_name%></div></a>
               <div class="product-price mb-2"><%=rows[4*i+2].strike_price%>원</div>
               <% if(user!=null){%>
-                <form action="http://127.0.0.1:3000/wish">
+                <form name="testForm<%=4*i+2%>">
                   <input type="hidden" name="img_link" value="<%=rows[4*i+2].img_link%>">
                   <input type="hidden" name="purchase_link" value="<%=rows[4*i+2].purchase_link%>">
                   <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
                   <input type="hidden" name="strike_price" value="<%=rows[4*i+2].strike_price%>">
                   <input type="hidden" name="user_id" value="<%=user.id%>">
-                  <input type="submit" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData()">
+                  <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i+2%>)">
                 </form>
                <% }%>
               <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
@@ -455,13 +455,13 @@
               <a href="<%=rows[4*i+3].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+3].item_name%></div></a>
               <div class="product-price mb-2"><%=rows[4*i+3].strike_price%>원</div>
               <% if(user!=null){%>
-                <form action="http://127.0.0.1:3000/wish">
+                <form name="testForm<%=4*i+3%>">
                   <input type="hidden" name="img_link" value="<%=rows[4*i+3].img_link%>">
                   <input type="hidden" name="purchase_link" value="<%=rows[4*i+3].purchase_link%>">
                   <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
                   <input type="hidden" name="strike_price" value="<%=rows[4*i+3].strike_price%>">
                   <input type="hidden" name="user_id" value="<%=user.id%>">
-                  <input type="submit" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData()">
+                  <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i+3%>)">
                 </form>
                <% }%>
               <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
@@ -503,20 +503,30 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script>
 
-function InsertData(){
+function InsertData(num){
 //1. 해당하는 제품의 ID 값을 가져와야함
 
-$.ajax({
+  var queryString = $("form[name=testForm"+num+"]").serialize() ; 
+  console.log(queryString)
+  $.ajax({ 
+    type : 'post',
+    url : '/wish', 
+    data : queryString,
+    dataType : 'json',
+    error: function(){ 
+       alert("실패"); 
+    }, 
+    success : function(data){
+       if(data.result == "ok"){
+          alert('위시리스트 담기 완료!');
+       }else{
+          alert('위시리스트 담기 실패..');
+       }
+       } 
+     });
 
-  success:function(){
-
-  },
-  error:function(){
-
+      
   }
-})
-
-}
 
 </script>
 </body>
